hphp/test/slow/class_constant/abstract_const7.php.expectf

Fatal error: Traits cannot have constants in %s/slow/class_constant/abstract_const7.php on line 10
